@startuml
title Study Report - One Builder
skinparam classAttributeIconSize 0
hide empty members

class Report <<Product>> {
  - title: String
  - content: String
  + Report(title: String, content: String)
  + getTitle(): String
  + getContent(): String
}
class ReportBuilder <<Builder>> {
  - title: String
  - sections: String
  + setTitle(title: String): ReportBuilder
  + addSection(heading: String, text: String): ReportBuilder
  + build(): Report
  - checkText(text: String, field: String): void
  - formatSection(heading: String, text: String): String
  - formatReport(title: String, sections: String): String
}
class ReportDirector <<Director>> {
  + createStudyReport(builder: ReportBuilder): Report
}
class Main <<Client>> {
  + {static} main(args: String[]): void
}

ReportBuilder ..> Report : creates
ReportDirector ..> ReportBuilder : calls steps
Main ..> ReportDirector : calls
Main ..> ReportBuilder : creates
Main ..> Report : prints
@enduml
